# agentrial

./: .gitignore  .pypirc.template  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  MASTERPLAN.md  README.md  action.yml  pyproject.toml
.github/workflows/: agenteval.yml  ci.yml  example.yml
agenteval/: __init__.py  cli.py  config.py  types.py
agenteval/ci/: __init__.py  github_action.py
agenteval/evaluators/: __init__.py  exact.py  expect.py  functional.py  step_eval.py
agenteval/metrics/: __init__.py  basic.py  statistical.py  trajectory.py
agenteval/reporters/: __init__.py  json_report.py  terminal.py
agenteval/runner/: __init__.py  engine.py  otel.py  trajectory.py
agenteval/runner/adapters/: __init__.py  base.py  langgraph.py
agentrial/: __init__.py  ars.py  cli.py  config.py  monitor.py  packs.py  pareto.py  prompts.py  pytest_plugin.py  registry.py  snapshots.py  types.py
agentrial/ci/: __init__.py  github_action.py
agentrial/dashboard/: __init__.py  app.py  models.py  store.py
agentrial/evaluators/: __init__.py  exact.py  expect.py  functional.py  llm_judge.py  multi_agent.py  step_eval.py
agentrial/metrics/: __init__.py  basic.py  statistical.py  trajectory.py
agentrial/reporters/: __init__.py  flamegraph.py  json_report.py  terminal.py
agentrial/runner/: __init__.py  engine.py  otel.py  trajectory.py
agentrial/runner/adapters/: __init__.py  autogen.py  base.py  crewai.py  langgraph.py  openai_agents.py  pricing.py  pydantic_ai.py  smolagents.py
agentrial/security/: __init__.py  scanner.py
examples/benchmark/: README.md  agent.py  agentrial.yml  ars_output.txt  baseline.json  flamegraph_haiku.html  terminal_pretty.txt
examples/langgraph_haiku/: README.md  agent.py  agentrial.yml
examples/simple_agent/: __init__.py  test_simple.py  test_simple.yml
tests/: __init__.py  test_adapters.py  test_ars.py  test_cli.py  test_dashboard.py  test_dashboard_http.py  test_engine.py  test_evaluators.py  test_flamegraph.py  test_llm_judge.py  test_metrics.py  test_monitor.py  test_multi_agent.py  test_otel.py  test_packs.py  test_pareto.py  test_pricing.py  test_prompts.py  test_pytest_plugin.py  test_registry.py  test_reporters.py  test_security.py  test_snapshots.py  test_statistical.py  test_store.py  test_trajectory_bh.py
vscode-extension/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json
vscode-extension/src/: extension.ts  flamegraph.ts  resultsTree.ts  runner.ts  suiteTree.ts
