[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentrial"
version = "0.1.4"
description = "Statistical evaluation framework for AI agents - pytest for agent trajectories"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "AgentEval Team" }
]
keywords = [
    "ai",
    "agents",
    "evaluation",
    "testing",
    "llm",
    "langgraph",
    "statistics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]
langgraph = [
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
]

[project.scripts]
agentrial = "agentrial.cli:main"

[project.urls]
Homepage = "https://github.com/agentrial/agentrial"
Documentation = "https://github.com/agentrial/agentrial#readme"
Repository = "https://github.com/agentrial/agentrial"

[tool.hatch.build.targets.wheel]
packages = ["agentrial"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
