[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentrial"
version = "0.2.0a2"
description = "Statistical evaluation framework for AI agents - pytest for agent trajectories"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Agentrial Team" }
]
keywords = [
    "ai",
    "agents",
    "evaluation",
    "testing",
    "llm",
    "langgraph",
    "statistics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]
langgraph = [
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
]
crewai = [
    "crewai>=0.1.0",
]
autogen = [
    "autogen-agentchat>=0.4.0",
]
pydantic-ai = [
    "pydantic-ai>=0.1.0",
]
openai-agents = [
    "openai-agents>=0.1.0",
]
smolagents = [
    "smolagents>=0.1.0",
]
judge = [
    "litellm>=1.0.0",
]
dashboard = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]
all = [
    "agentrial[langgraph]",
    "agentrial[crewai]",
    "agentrial[autogen]",
    "agentrial[pydantic-ai]",
    "agentrial[openai-agents]",
    "agentrial[smolagents]",
    "agentrial[judge]",
    "agentrial[dashboard]",
]

[project.scripts]
agentrial = "agentrial.cli:main"

[project.entry-points."pytest11"]
agentrial = "agentrial.pytest_plugin"

[project.urls]
Homepage = "https://github.com/alepot55/agentrial"
Documentation = "https://github.com/alepot55/agentrial#readme"
Repository = "https://github.com/alepot55/agentrial"
Issues = "https://github.com/alepot55/agentrial/issues"
Changelog = "https://github.com/alepot55/agentrial/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["agentrial"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
